menambahkan fs di h2

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Desa Kedungwaringin</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase fs-1 mb-0">Desa Kedungwaringin</h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
                                 </div>
@@ -171,7 +171,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Toko Online CV.DAT</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase fs-1 mb-0">Toko Online CV.DAT</h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
                                 </div>
@@ -200,7 +200,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Notaris Sisca Angelia</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase fs-1 mb-0">Notaris Sisca Angelia</h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
                                 </div>
